# elements-rs

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
engine/: Cargo.toml
engine/src/: lib.rs
engine/src/application/: mod.rs
engine/src/asset_loader/: gltf_model.rs
engine/src/core/: vertex.rs
engine/src/engine/: mod.rs
engine/src/logger/: mod.rs
engine/src/platform/: mod.rs  platform_winit.rs
engine/src/renderer/: mod.rs
engine/src/renderer/renderer_vulkan/: shaders.rs
engine/src/resource_manager/: mod.rs
playground/: Cargo.toml
playground/src/: main.rs
src/: main.rs
src/application/: mod.rs
src/asset_loader/: mod.rs
src/core/: mod.rs  ubo.rs
src/input/: mod.rs
src/logger/: mod.rs
src/logging_system/: mod.rs
src/platform/: mod.rs  platform_winit.rs
src/renderer/: mod.rs  renderer_vulkan.rs
src/renderer/renderer_vulkan/: buffers.rs  mod.rs  pipeline.rs  render_context.rs  render_targets.rs  resources.rs  shaders.rs  swapchain.rs
src/resource_manager/: mod.rs
src/window/: mod.rs
src/window_manager/: mod.rs
