[workspace]
resolver = "3"
members = [
    "engine", "playground",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Rhythm Goel <rhythm1705@outlook.com>"]

[workspace.lints.rust]
# Allow unused code warnings
dead_code = "allow"
unused_variables = "allow"
unused_imports = "allow"
unused = "allow"

[workspace.lints.clippy]
# Deny the entire set of default Clippy lints.
all = { level = "deny", priority = -1 }
# Deny the entire set of pedantic lints, which catch non-idiomatic or potentially messy code.
#pedantic = "deny"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3