[workspace]
resolver = "3"
members = [
    "engine", "playground",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Rhythm Goel <rhythm1705@outlook.com>"]

[workspace.lints.rust]
# Allow unused code warnings
unused = { level = "allow", priority = 1 }
dead_code = { level = "allow", priority = 1 }

[workspace.lints.clippy]
# Warn on the entire set of default Clippy lints
all = { level = "warn", priority = -1 }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3